Fixed style on mobile menu

--- a/assets/css/jaxplays-style.css
+++ b/assets/css/jaxplays-style.css
@@ -108,24 +108,37 @@ table.showdetails thead tr th {
         padding: 1rem;
     }
     #git-wiki-mobile-header {
-        width: calc(100vw - 2rem);
+        width: calc(100vw);
         display: flex;
         flex-direction: row;
         align-items: center;
         border: 0px;
-        top: 1rem;
+        border-radius: 0;
+        margin-left: -1rem;
+        height: 75px;
+    }
+
+    #git-wiki-mobile-header button.w3-button {
+        height: 75px;
+        width: 75px;
+        font-size: 2.4rem;
+        padding: 0;
     }
     #git-wiki-mobile-header a.sitelogoandtext {
         color: var(--header-font-color);
         font-family: var(--logo-font-family);
         font-size: 3rem;
         font-weight: var(--logo-font-weight);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1rem;
     }
     #git-wiki-mobile-header img.mobilelogo {
-        max-height: 50px;
-        height: 40px;
+        max-height: 55px;
+        height: 55px;
     }
     #git-wiki-sidebar {
-            top: 80px;
+            top: 75px;
     }
 }
